--- a/templates/index.html
+++ b/templates/index.html
@@ -8,17 +8,17 @@
     <div class="slider-forms z-depth-2">
         <div class="left-area">
             <h5>Create your account</h5>
-            <button class="btn btn-register"></button>
+            <button class="btn btn-create">Register</button>
         </div>
         <div class="right-area">
-            <h5>Log In</h5>
-            <button class="btn btn-login"></button>
+            <h5>Have an account?</h5>
+            <button class="btn btn-account">Sign in</button>
         </div>
         <div class="forms">
             <div class="form-login">
                 <h5>Log In</h5>
                 <div class="row">
-                    <form class="col s12">
+                    <form class="col s12" method="POST" action="{{ url_for('login') }}">
                         <div class="row">
                             <div class="input-field col s12">
                                 <input id="login-email" type="email" name="email" class="validate">
@@ -33,29 +33,29 @@
                         </div>
                         <div class="row">
                             <div class="col s12 center-align">
-                                <button type="submit" class="btn btn-submit">Log In</button>
+                                <button type="submit" class="btn btn-login">Log In</button>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
             <div class="form-register hidden-form">
-                <h5>Log In</h5>
+                <h5>Register</h5>
                 <div class="row">
-                    <form class="col s12">
-                        <div class="row">
+                    <form class="col s12" method="POST" action="{{ url_for('register') }}">
+                        <div class="row input-margim">
                             <div class="input-field col s12">
                                 <input id="username" name="username" type="text" class="validate">
                                 <label for="username">Name</label>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row input-margim">
                             <div class="input-field col s12">
                                 <input id="email" type="email" name="email" class="validate">
                                 <label for="email">Email</label>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row input-margim">
                             <div class="input-field col s12">
                                 <input id="dob" name="dob" type="text" class="datepicker validate">
                                 <label for="dob">Date of Birthday</label>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="row">
                             <div class="col s12 center-align">
-                                <button type="submit" class="btn btn-submit">Login</button>
+                                <button type="submit" class="btn btn-register">Register</button>
                             </div>
                         </div>
                     </form>
