--- a/templates/programs_list.html
+++ b/templates/programs_list.html
@@ -1,5 +1,65 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="exercise-list">
+
+    <div class="group-list">
+
+        <h5 class="group-name">Shoulder</h5>
+
+        <ul class="collapsible">
+            <li>
+                <div class="collapsible-header z-depth-1">First</div>
+                <div class="collapsible-body">
+                    <div class="exercise-info">
+                        <div class="info-name">Weight: </div><span>15</span><span>kg</span>
+                    </div>
+                    <div class="exercise-info">
+                        <div class="info-name">Reps: </div>12</span>
+                    </div>
+                    <div class="exercise-info">
+                        <div class="info-name">Series: </div><span>3</span>
+                    </div>
+                    <div class="exercise-info">
+                        <div class="info-name">Interval: </div><span>45</span><span>s</span>
+                    </div>
+                    <div class="exercise-info">
+                        <div class="info-name" id="note">Note: </div>Lorem ipsum dolor sit, amet
+                        consectetur adipisicing elit.</span>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="collapsible-header z-depth-1">Second</div>
+                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+            </li>
+            <li>
+                <div class="collapsible-header z-depth-1">Third</div>
+                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+            </li>
+        </ul>
+
+    </div>
+    <div class="group-list">
+        <h5 class="group-name">Shoulder</h5>
+
+        <ul class="collapsible">
+            <li>
+                <div class="collapsible-header">First</div>
+                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+            </li>
+            <li>
+                <div class="collapsible-header">Second</div>
+                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+            </li>
+            <li>
+                <div class="collapsible-header">Third</div>
+                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+            </li>
+        </ul>
+    </div>
+
+</div>
+
 
 {% endblock %}
