--- a/static/css/style.css
+++ b/static/css/style.css
@@ -227,8 +227,15 @@ nav {
 .btn-register, .btn-login {
     background-color: rgb(58 12 163 / 71%);}
 
-.input-margim {
+.input-margim, .form-margin {
     margin-bottom: 0px;
+}
+
+.error-register, .error-login {
+    display: flex;
+    justify-content: center;
+    padding: 0 .75rem;
+    color: red;
 }
 
 @media(max-width: 767px) {
@@ -255,4 +262,69 @@ nav {
     .slide-active .forms {
         right: auto;
     }
+}
+
+/* Programs */
+
+.exercise-list {
+    width: 100%;
+}
+
+.exercise-list h5 {
+    font-size: 1.6rem;
+    color: var(--white);
+    text-shadow: 1px 1px var(--black);
+    margin-top: 30px;
+}
+
+.group-list {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.collapsible {
+    border: none;
+}
+
+.collapsible-header {
+    background-color: var(--dark-grey);
+    color: var(--white);
+    border: none;
+    filter: opacity(0.8);
+    padding: .7rem 1rem;
+    font-size: 1.3rem;
+}
+
+.collapsible-body {
+    background: rgb(255 245 245 / 10%);
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    backdrop-filter: blur(20.0px);
+    -webkit-backdrop-filter: blur(20.0px);
+    border-right: 1px solid rgba(255, 255, 255, 0.10);
+    color: var(--white);
+    font-weight: 200;
+    border-bottom: none;
+    padding: 20px 28px 15px;
+}
+
+.exercise-info {
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+}
+
+.info-name {
+    display: inline-block;
+    width: 70px;
+    color: var(--vivid-sky-blue);
+    font-weight: 500;
+}
+
+#note {
+    width: unset;
+    margin-right: 5px;
+}
+
+.exercise-info span{
+    font-size: 1.2rem;
+    margin-bottom: 5px;
 }
