--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,7 @@
     --white: #ffffff;
     --black: #000;
     --dark-grey: #201f21;
+    --orange: #f5ab35;
 }
 
 * {
@@ -35,9 +36,9 @@ body {
 }
 
 .container > h3,
-.container > h5 {
+.container > h5,
+.container > h6  {
     color: var(--white);
-    text-align: center;
     text-shadow: 1px 1px 20px #000;
 }
 
@@ -266,6 +267,28 @@ nav {
 
 /* Programs */
 
+.program-status {
+    color:  var(--white);
+    padding: 13px 30px 20px;
+    background: rgb(255 245 245 / 10%);
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    backdrop-filter: blur(20.0px);
+    -webkit-backdrop-filter: blur(20.0px);
+    border: 1px solid rgba(255, 255, 255, 0.10);
+    border-radius: 15px;
+    width: 100%;
+    max-width: 320px;
+}
+
+.program-status h6 {
+    margin-bottom: 10px;
+}
+
+.program-status p {
+    margin-bottom: 2px;
+}
+
+
 .exercise-list {
     width: 100%;
 }
@@ -284,16 +307,38 @@ nav {
 
 .collapsible {
     border: none;
+    border-radius: 10px;
+}
+
+li:first-child > .collapsible-header {
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.collapsible-body {
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
 .collapsible-header {
-    background-color: var(--dark-grey);
+    background-color: rgb(32 31 33 / 80%);
     color: var(--white);
     border: none;
-    filter: opacity(0.8);
     padding: .7rem 1rem;
     font-size: 1.3rem;
+    justify-content: space-between;
 }
+
+.collapsible-header i {
+    margin: 3px 0 0 0;
+}
+
+.collapsible li.active i {
+    -ms-transform: rotate(180deg); /* IE 9 */
+    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+    transform: rotate(180deg);
+    margin: 2px 0 3px 0;
+  }
 
 .collapsible-body {
     background: rgb(255 245 245 / 10%);
@@ -314,9 +359,12 @@ nav {
 
 .info-name {
     display: inline-block;
-    width: 70px;
-    color: var(--vivid-sky-blue);
+    width: 80px;
     font-weight: 500;
+    color: var(--orange);
+    text-shadow: 1px 1px var(--dark-grey);
+    letter-spacing: 1px;
+    text-transform: lowercase;
 }
 
 #note {
