--- a/static/css/style.css
+++ b/static/css/style.css
@@ -376,3 +376,147 @@ li:first-child > .collapsible-header {
     font-size: 1.2rem;
     margin-bottom: 5px;
 }
+
+/* Editor */
+.editor-controls {
+    width: 100%;
+    display: block;
+    max-width: 600px;
+    margin-top: 40px;
+}
+
+
+.btn-editor {
+    padding: 0px 16px;
+    height: 24px;
+    margin-right: 15px;
+    line-height: 21px;
+    font-size: 14px;
+    margin-top: -4px;
+}
+
+.add-excerise__form {
+    width: 100%;
+    max-width: 600px;
+}
+
+.add-excerise__form label, .add-excerise__form  input {
+    color: var(--white);
+}
+
+.add-name {
+    background-color: rgb(32 31 33 / 80%);
+    color: var(--white);
+    border: none;
+    padding: .7rem 1rem;
+    font-size: 1.3rem;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.add-info {
+    background: rgb(255 245 245 / 10%);
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    backdrop-filter: blur(20.0px);
+    -webkit-backdrop-filter: blur(20.0px);
+    border-right: 1px solid rgba(255, 255, 255, 0.10);
+    color: var(--white);
+    font-weight: 200;
+    border-bottom: none;
+    padding: 28px 28px 28px;
+}
+
+.add-buttons {
+    width: 100%;
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.btn-cancel, .btn-add {
+    min-width: 143px;
+}
+
+.btn-cancel {
+    background-color: var(--byzantine)
+}
+
+#group {
+    display: block;
+    background: rgb(255 245 245 / 10%);
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    backdrop-filter: blur(20.0px);
+    -webkit-backdrop-filter: blur(20.0px);
+    border: none;
+    color: var(--white);
+}
+
+.add-group {
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.add-group label {
+    padding: 0 15px 5px;
+    display: block;
+}
+
+.add-group select {
+    padding: 15px;
+    height: 60px;
+    border-radius: 10px;
+    font-size: 1.6rem;
+    color: var(--white);
+    text-shadow: 1px 1px var(--black);
+}
+
+.add-info {
+    display: grid;
+    grid-template-columns: 80px auto;
+    grid-template-rows: 1fr;
+    grid-auto-flow: column; 
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.add-info label {
+    grid-column: 1 / 2;
+    width: 80px;
+    font-weight: 500;
+    color: var(--orange);
+    text-shadow: 1px 1px var(--dark-grey);
+    letter-spacing: 1px;
+    text-transform: lowercase;
+    align-self: center;
+    font-size: 1.2rem;
+    transform: translateY(-4px);
+}
+
+.add-info input {
+    grid-column: 2 / 3;
+    font-size: 1.2rem;
+    color: var(--white);
+    font-weight: 200;
+}
+
+.note-label {
+    align-self: flex-start !important;
+    transform: translateY(10px) !important;
+}
+
+#note {
+    height: 100px;
+    margin-top: 17px;
+    font-size: 1.2rem;
+    color: var(--white);
+    font-weight: 200;
+    padding: 5px;
+}
+
+#note:focus {
+    outline: none;
+    border: 1px solid var(--white);
+}
+
+
