--- a/templates/edit_program.html
+++ b/templates/edit_program.html
@@ -1,5 +1,59 @@
 {% extends "base.html" %}
 {% block content %}
 
+<h3>Program Editor</h3>
+
+<div class="editor-controls">
+    <a href="{{ url_for('add_exercise', username=session['user']) }}" class="btn">Add Exercise +</a>
+</div>
+
+
+{% if exercises_list|length > 0 %}
+<div class="exercise-list">
+    {% for group in groups_list %}
+    <div class="group-list">
+
+        <h5 class="group-name">{{group}}</h5>
+
+        <ul class="collapsible">
+
+            {% for exercise in exercises_list %}
+            {% if exercise.group_name ==  group %}
+            <li>
+                <div class="collapsible-header z-depth-1">{{ exercise.exercise_name }}
+                    <div><a href="" class="btn btn-editor ">Delete</a><a href="" class="btn btn-editor ">Edit</a><i class="fas fa-chevron-circle-down"></i></div></div>
+                <div class="collapsible-body">
+                    <div class="exercise-info">
+                        <div class="info-name">Weight: </div><span>{{ exercise.weight }}</span><span>kg</span>
+                    </div>
+                    <div class="exercise-info">
+                        <div class="info-name">Reps: </div>{{ exercise.reps }}</span>
+                    </div>
+                    <div class="exercise-info">
+                        <div class="info-name">Series: </div><span>{{ exercise.series }}</span>
+                    </div>
+                    <div class="exercise-info">
+                        <div class="info-name">Interval: </div><span>{{ exercise.time_interval }}</span><span>s</span>
+                    </div>
+                    {% if exercise.note %}
+                    <div class="exercise-info">
+                        <div class="info-name" id="note">Note: </div>{{ exercise.note }}</span>
+                    </div>
+                    {% endif %}
+                </div>
+            </li>
+            {% endif %}
+            {% endfor %}
+        </ul>
+    </div>
+    {% endfor %}
+</div>
+{% else %}
+<div class="no-exercises">
+    <h4>No exercises</h4>
+</div>
+<h3 class="red-text text-darken-4 center-align">No Results Found</h3>
+{% endif %}
+
 
 {% endblock %}
