--- a/templates/index.html
+++ b/templates/index.html
@@ -22,14 +22,14 @@
                         <div class="row">
                             <div class="input-field col s12">
                                 <input id="login-email" type="email" name="email" class="validate" minlength="10" maxlength="30" 
-                                pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" required>
+                                 required>
                                 <label for="login-email">Email</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
-                                <input id="lpassword" type="password" name="password" class="validate" minlength="8" maxlength="20"
-                                pattern="/^[a-zA-Z0-9:.,?!@]{3,15}[#$^]?$/" required>
+                                <input id="lpassword" type="password" name="password" class="validate" minlength="6" maxlength="20"
+                                required>
                                 <label for="lpassword">Password</label>
                             </div>
                         </div>
@@ -60,7 +60,7 @@
                         <div class="row input-margim">
                             <div class="input-field col s12">
                                 <input id="email" type="email" name="email" class="validate" minlength="10" maxlength="50" 
-                                pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" required>
+                                required>
                                 <label for="email">Email</label>
                             </div>
                         </div>
@@ -73,7 +73,7 @@
                         <div class="row">
                             <div class="input-field col s12">
                                 <input id="password" name="password" type="password" class="validate" minlength="8" maxlength="20"
-                                pattern="/^[a-zA-Z0-9:.,?!@]{3,15}[#$^]?$/" required>
+                                 required>
                                 <label for="password">Password</label>
                             </div>
                         </div>
