--- a/templates/programs_list.html
+++ b/templates/programs_list.html
@@ -3,7 +3,7 @@
 
 <h3>Welcome {{username.capitalize() }}</h3>
 
-<p>The estimated duration of your program is {{ exercises_info.total_program_string }}. Have a good training!</p>
+<h6>The estimated duration of your program is {{ exercises_info.total_program_string }}. Have a good training!</h6>
 
 {% if exercises_list|length > 0 %}
 <div class="exercise-list">
